[package]
name = "iwicrawl"
version = "0.1.0"
authors = ["iwikal <e.joel.nordstrom@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
failure = "0.1"
futures = "0.1"
html5ever = "0.22"
hyper = "0.12"
hyper-tls = "0.3"
libc = "0.2"
log = "0.4"
stderrlog = "0.4"
tokio = "0.1"
toks = "0.8"
url = "1.7"
