[package]
name = "iwicrawl"
description = "an indexer for open directories"
version = "0.1.0"
authors = ["iwikal <e.joel.nordstrom@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/iwikal/iwicrawl"

[dependencies]
clap = "2.32"
encoding = "0.2"
failure = "0.1"
futures-util-preview = "0.3.0-alpha.18"
html5ever = "0.22"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
libc = "0.2"
log = "0.4"
mime = "0.3"
stderrlog = "0.4"
tokio = "0.2.0-alpha.4"
toks = "0.8"
url = "1.7"
